--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     implementation 'androidx.room:room-runtime:2.2.5'
+    implementation 'com.google.firebase:firebase-storage:20.1.0'
     annotationProcessor 'androidx.room:room-compiler:2.2.5'
     implementation 'androidx.navigation:navigation-fragment:2.6.0'
     implementation 'androidx.navigation:navigation-ui:2.6.0'
