--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -15,12 +15,17 @@
         android:theme="@style/Theme.Hein"
         tools:targetApi="31">
         <activity
+            android:name=".shoppingcart.ShoppingCartActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ordered_product.OrderActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.DashboardActivity"
             android:exported="false" />
         <activity
             android:name=".activities.DetailedActivity"
-            android:exported="false" >
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".home.HomeActivity"
             android:exported="true">
